--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "coin-or-osi" %}
-{% set version = "0.108.8" %}
+{% set version = "0.108.7" %}
 
 package:
   name: {{ name|lower }}
@@ -7,13 +7,13 @@ package:
 
 source:
   url: https://github.com/coin-or/Osi/archive/releases/{{ version }}.tar.gz
-  sha256: 8b01a49190cb260d4ce95aa7e3948a56c0917b106f138ec0a8544fadca71cf6a
+  sha256: f1bc53a498585f508d3f8d74792440a30a83c8bc934d0c8ecf8cd8bc0e486228
   patches:
     - 0001-Patch-for-downstream.patch
 
 build:
   number: 0
-  skip: true  # [win]
+  skip: true  # [win or blas_impl == "mkl"]
   run_exports:
     - {{ pin_subpackage(name, min_pin='x.x', max_pin='x.x') }}
 
@@ -28,9 +28,11 @@ requirements:
     - coin-or-utils
     - zlib
     - bzip2
-    - libblas
-    - libcblas
-    - liblapack
+    - openblas {{ openblas }}         # [blas_impl == "openblas"]
+  run:
+    - libopenblas                     # [blas_impl == "openblas"]
+  # To stop the compiler pulling in an openmp implementation itself
+    - _openmp_mutex                   # [linux]
   run_constrained:
     - coincbc * *_metapackage
 
